# agentflight

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/bundle/: Cargo.toml
crates/bundle/src/: lib.rs
crates/capture-mcp/: Cargo.toml
crates/capture-mcp/src/: lib.rs
crates/capture-process/: Cargo.toml
crates/capture-process/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_initial.sql
crates/storage/src/: lib.rs
docs/architecture/: mcp-stdio.md  phase-0.md  phase-1-capture.md
examples/: demo-agent.sh  mcp-demo-agent.sh
schemas/: event.schema.json  run-manifest.schema.json
tests/e2e/: mcp-stdio.sh
tests/fixtures/: mock-mcp-server.sh
