[workspace]
members = ["crates/core", "crates/bundle", "crates/storage", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/agentflight/agentflight"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
hex = "0.4"
regex = "1.11"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.20"
uuid = { version = "1.17", features = ["v7", "serde"] }
walkdir = "2.5"
zip = { version = "4.3", default-features = false, features = ["deflate"] }
