[package]
name = "agentflight-capture-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentflight-core = { path = "../core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
