[package]
name = "agentflight-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentflight"
path = "src/main.rs"

[dependencies]
agentflight-bundle = { path = "../bundle" }
agentflight-core = { path = "../core" }
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
