[package]
name = "agentflight-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentflight"
path = "src/main.rs"

[dependencies]
agentflight-bundle = { path = "../bundle" }
agentflight-capture-process = { path = "../capture-process" }
agentflight-capture-mcp = { path = "../capture-mcp" }
agentflight-core = { path = "../core" }
agentflight-storage = { path = "../storage" }
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
